--- a/signup.html
+++ b/signup.html
@@ -36,23 +36,31 @@
 
 <main class="form-signin">
   <form>
-    <img src="images/vibrantcomp.png" alt="image of computer" />
-    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+    <img class="mb-4" src="images/vibrantcomp.png" alt="image of computer" />
+    <h1 class="h3 mb-3 fw-normal">Signup to our Newsletter!</h1>
 
     <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-      <label for="floatingInput">Email address</label>
-    </div>
-    <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-      <label for="floatingPassword">Password</label>
+      <input type="text" class="form-control"  placeholder="First Name" required autofocus>
+      <label for="first name">First Name</label>
     </div>
 
-    <div class="checkbox mb-3">
+    <div class="form-floating">
+      <input type="text" class="form-control" placeholder="Last Name" required />
+      <label for="last name">Last Name</label>
+    </div>
+
+    <div class="form-floating">
+      <input type="email" class="form-control"  placeholder="Email" required>
+      <label for="email">Email</label>
+    </div>
+
+
+
+    <!-- <div class="checkbox mb-3">
       <label>
         <input type="checkbox" value="remember-me"> Remember me
       </label>
-    </div>
+    </div> -->
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
     <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
   </form>
